# hysbot-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: mod.rs
src/hypixel/: mod.rs
src/utility/: formatting.rs  mod.rs
