[package]
name = "twitch-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
twitch-irc = { version = "4.0.0", features = ["transport-tcp", "transport-tcp-native-tls"] }
mongodb = "2.1.0"
reqwest = {version = "0.11.10", features = ["json"] }
serde_json = "1.0"
serde = {version = "1.0.136", features = ["derive"] }
dotenv = "0.10"